fix: creation of a project fixed
